# ReactionClassifier

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
scripts/: make_public_db.py
src/reactionclassifier/: __init__.py  _match.py  classifier.py  database.py  features.py  model.py  taxonomy.py
src/reactionclassifier/data/: granularity_examples.json  granularity_examples_medchem.json  taxonomy.json
src/reactionclassifier/data/gate/: label_map.json  meta.json
tests/: test_classifier.py
