[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactionclassifier"
version = "0.1.0"
description = "Hybrid-strict hierarchical reaction classification (LLM-derived taxonomy + deterministic template matching)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Armstrong" }]
keywords = ["chemistry", "reaction classification", "cheminformatics", "rdkit", "retrosynthesis"]
dependencies = [
    "rdkit>=2023.3",
    "torch>=2.0",
    "numpy>=1.23",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/schwallergroup/ReactionClassifier"
Repository = "https://github.com/schwallergroup/ReactionClassifier"

[project.optional-dependencies]
database = ["pandas>=1.5", "pyarrow>=10", "requests>=2.28"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reactionclassifier = ["data/**/*"]
